# warefly_test_task

./: Dockerfile  README.md  docker-compose.yml  migrations.sh  pyproject.toml
src/: insert_data.py
src/api/: main.py  utils.py
