[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Ramazan <ramazanui2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
clickhouse-driver = "^0.2.6"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
